adding MANAGED BY PUPPET headers

--- a/modules/redis/files/redis.conf
+++ b/modules/redis/files/redis.conf
@@ -1,4 +1,5 @@
-# Redis configuration file example
+####  This file under configuration management control
+####  DO NOT EDIT MANUALLY
 
 # Note on units: when memory size is needed, it is possible to specifiy
 # it in the usual form of 1k 5GB 4M and so forth:
