--- a/secrets.pp.template
+++ b/secrets.pp.template
@@ -47,6 +47,9 @@ class secrets {
     $w764_tests_password = 'pass'
     $vista_tests_password = 'pass'
     $tegra_android_tests_password = 'pass'
+
+    ## Buildapi stuff
+    $buildapi_rmq_password = 'pass'
 }
 
 class secrets::users {
