setting up production.ini

--- a/secrets.pp.template
+++ b/secrets.pp.template
@@ -50,6 +50,13 @@ class secrets {
 
     ## Buildapi stuff
     $buildapi_rmq_password = 'pass'
+    $buildapi_session_secret = 'secret'
+    $buildapi_schedulerdb_host = 'host'
+    $buildapi_schedulerdb_user = 'user'
+    $buildapi_schedulerdb_pass = 'pass'
+    $buildapi_statusdb_host = 'host'
+    $buildapi_statusdb_user = 'user'
+    $buildapi_statusdb_pass = 'pass'
 }
 
 class secrets::users {
