allow specification of other redis server

--- a/secrets.pp.template
+++ b/secrets.pp.template
@@ -53,10 +53,13 @@ class secrets {
     $buildapi_session_secret = 'secret'
     $buildapi_schedulerdb_host = 'host'
     $buildapi_schedulerdb_user = 'user'
-    $buildapi_schedulerdb_pass = 'pass'
+    $buildapi_schedulerdb_password = 'pass'
+    $buildapi_schedulerdb_database = 'pass'
     $buildapi_statusdb_host = 'host'
     $buildapi_statusdb_user = 'user'
-    $buildapi_statusdb_pass = 'pass'
+    $buildapi_statusdb_password = 'pass'
+    $buildapi_statusdb_database = 'pass'
+    $buildapi_cache_server = 'redis:'
 }
 
 class secrets::users {
