--- a/secrets.pp.template
+++ b/secrets.pp.template
@@ -76,7 +76,7 @@ class secrets {
     $buildapi_statusdb_user = 'user'
     $buildapi_statusdb_password = 'pass'
     $buildapi_statusdb_database = 'pass'
-    $buildapi_cache_server = 'redis:'
+    $buildapi_redis_host = 'localhost'
 }
 
 class secrets::users {
