manage rmq host

--- a/secrets.pp.template
+++ b/secrets.pp.template
@@ -67,6 +67,7 @@ class secrets {
 
     ## Buildapi stuff
     $buildapi_rmq_password = 'pass'
+    $buildapi_rmq_host = 'localhost'
     $buildapi_session_secret = 'secret'
     $buildapi_schedulerdb_host = 'host'
     $buildapi_schedulerdb_user = 'user'
